# AI-PY

./: .env.example  .gitignore  README.md  pyproject.toml
DOCS/: README.md
DOCS/00_기준/: GitHub_형상관리_전략.md  인프라_운영_전략.md  작업_태스크_운영_원칙.md  통합_개발_테스트_방법론.md  프로젝트_헌법.md
DOCS/01_overview/: README.md  project_scope.md  repo_structure.md
DOCS/01_개요/: AI_서비스_실행_개요.md  README.md
DOCS/02_architecture/: README.md  integration_boundary.md  service_architecture.md
DOCS/02_아키텍처/: README.md
DOCS/03_requirements/: README.md  non_functional_requirements.md
DOCS/03_요구사항/: README.md  기능_요구사항_명세서.md
DOCS/04_API명세/: API_카탈로그.md  README.md  문항생성_API_상세.md  자료분석_API_상세.md  질의응답_API_상세.md
DOCS/04_api/: README.md  generate_questions_api.md
DOCS/05_chains/: README.md  material_extraction_chain.md  qa_chain.md  question_generation_chain.md
DOCS/05_체인명세/: README.md
DOCS/06_prompts/: README.md  qa_prompt.md  question_generation_prompt.md
DOCS/06_프롬프트명세/: README.md  질의응답_프롬프트.md
DOCS/07_policies/: README.md  policy_catalog.md
DOCS/07_정책/: README.md
DOCS/08_adr/: README.md
DOCS/08_의사결정기록/: README.md
DOCS/09_plans/: README.md
DOCS/09_계획/: README.md
DOCS/10_운영/: AI_RELEASE_GATE.md  AI_SMOKE_CHECKLIST.md  README.md
DOCS/15_기능명세/: F2_자료분석_AI.md  F3_문항생성_AI.md  F6_질의응답_AI.md  README.md
app/: config.py  main.py  schemas.py
app/services/: material_extraction.py  qa_service.py  question_generation.py
tests/: test_config_port.py  test_material_extraction.py  test_qa_failure.py
