[project]
name = "ai-py"
version = "0.1.0"
description = "AI-STUDY Python AI service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1,<0.117.0",
  "uvicorn[standard]>=0.35.0,<0.36.0",
  "pydantic>=2.11.7,<3.0.0",
  "langchain>=0.3.27,<0.4.0",
  "langchain-google-genai>=2.1.9,<3.0.0",
  "langchain-community>=0.3.27,<0.4.0",
  "pypdf>=5.8.0,<6.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2,<9.0.0",
  "httpx>=0.28.1,<0.29.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
